# TopicosIALabs

./: .gitignore
CNN/: .gitignore  CMakeLists.txt  run.sh
CNN/app/: main.cpp
CNN/historyCNN/: 20_3_28_28.txt  graf_cnn.py  graf_mlp.py  mlp.txt
CNN/include/activations/: Sigmoid.hpp  Tanh.hpp
CNN/include/core/: Tensor.hpp
CNN/include/layers/: Conv2D.hpp  Dropout.hpp  Flatten.hpp  Pooling2D.hpp
CNN/include/model/: Sequential.hpp
CNN/include/optimizers/: Adam.hpp
CNN/src/activations/: ReLU.cpp  Sigmoid.cpp  Tanh.cpp
CNN/src/core/: Tensor.cpp
CNN/src/layers/: Conv2D.cpp  Dense.cpp  Dropout.cpp  Flatten.cpp  Pooling2D.cpp
CNN/src/model/: Sequential.cpp
CNN/src/optimizers/: Adam.cpp  SGD.cpp
CNN/src/utils/: DataReader.cpp  Utils.cpp
Lab01/: README.md  holamundo  holamundo.cu  sumVectorCpu  sumVectorCpu.cpp  sumVectorGpu  sumVectorGpu.cu
Lab02/: .gitignore  CMakeLists.txt  main.cpp  perceptron.cpp  perceptron.hpp  run.sh
Lab02/utils/: graficos.py  graficos2.py  perceptronPython.py
Lab03/: main.cpp  pm  pm.cpp  pm.hpp
Lab04/: capa.cpp  mnist_utils.hpp  neurona.cpp  neurona.hpp  perceptronMulticapa.hpp
Lab04/saves/: historial_entrenamiento_10.txt  modelo_mnist_pesos_20.txt
Lab05/: capa.cpp  capa.hpp  neurona.cpp  perceptronMulticapa.cpp  test.cpp
Lab05/saves/: historial_entrenamiento_40.txt  modelo_mnist_pesos_10.txt  modelo_mnist_pesos_40.txt
Lab06/: capa.cpp  capa.hpp  main.cpp  neurona.cpp  neurona.hpp  perceptronMulticapa.cpp  perceptronMulticapa.hpp  test.cpp
Lab06/graficador/: plot.py  plotter.py
Lab06/results30epocas/: historial_entrenamiento_30_adam.txt  historial_entrenamiento_30_adamDropout.txt  historial_entrenamiento_30_adamL2.txt  historial_entrenamiento_30_rmsprop.txt  historial_entrenamiento_30_sgd.txt  modelo_mnist_pesos_30_adam.txt  modelo_mnist_pesos_30_adamDropout.txt  modelo_mnist_pesos_30_adamL2.txt  modelo_mnist_pesos_30_rmsprop.txt  modelo_mnist_pesos_30_sgd.txt  outConsola_30_adam.txt  outConsola_30_adamDropout.txt  outConsola_30_adamL2.txt  outConsola_30_prop.txt  outConsola_30_sgd.txt
Lab06/results50epocas/: historial_entrenamiento_50_adam.txt  historial_entrenamiento_50_adamDropout.txt  historial_entrenamiento_50_adamL2.txt  historial_entrenamiento_50_rmsprop.txt  historial_entrenamiento_50_sgd.txt  modelo_mnist_pesos_50_adam.txt  modelo_mnist_pesos_50_adamDropout.txt  modelo_mnist_pesos_50_adamL2.txt  modelo_mnist_pesos_50_rmsprop.txt  modelo_mnist_pesos_50_sgd.txt  outConsola_50_adam.txt  outConsola_50_adamDropout.txt  outConsola_50_adamL2.txt  outConsola_50_prop.txt  outConsola_50_sgd.txt
Lab07/: CapaConvolucional.cpp  CapaConvolucional.hpp  Matriz.cpp  Matriz.hpp  main.cpp  testImage.cpp
Lab07/resources/: CodigoPrincipalCompleto.cpp
Lab08/: CapaConvolucional.cpp  CapaConvolucional.hpp  CapaFlatten.cpp  CapaFlatten.hpp  CapaPooling.cpp  CapaPooling.hpp  Loader.hpp  main.cpp  testImage.cpp
Lab08/resources/: CodigoCompleto.cpp
VIT/: CMakeLists.txt  codigoCompleto.cpp
VIT/app/: main.cpp
VIT/include/activations/: GELU.hpp  ReLU.hpp
VIT/include/core/: Tensor.hpp
VIT/include/layers/: Dense.hpp  Embeddings.hpp  FeedForward.hpp  Layer.hpp  LayerNorm.hpp  MultiHeadAttention.hpp  PatchEmbedding.hpp
VIT/include/losses/: CrossEntropy.hpp  Loss.hpp
VIT/include/model/: Trainer.hpp  TransformerEncoderBlock.hpp  VisionTransformer.hpp
VIT/include/optimizers/: Optimizer.hpp
VIT/include/utils/: DataReader.hpp  ModelUtils.hpp
VIT/src/activations/: GELU.cpp  ReLU.cpp
VIT/src/core/: Tensor.cpp
VIT/src/layers/: Dense.cpp  Embeddings.cpp  FeedForward.cpp  LayerNorm.cpp  MultiHeadAttention.cpp  PatchEmbedding.cpp
VIT/src/losses/: CrossEntropy.cpp
VIT/src/model/: Trainer.cpp  TransformerEncoderBlock.cpp  VisionTransformer.cpp
VIT/src/utils/: DataReader.cpp  ModelUtils.cpp
lab04/: main.cpp
lab04/saves/: historial_entrenamiento_20.txt
